--- a/study/bind-style-obj.html
+++ b/study/bind-style-obj.html
@@ -23,7 +23,7 @@
         var vm = new Vue({
             el: "#app",
             data: {
-                isActivated: false
+                isActivated: true
             },
             methods: {
                 changeStyle () {
